# Shadow_Supervisor-OpenEnv

./: .gitignore  README.md  openenv.yaml  pyproject.toml  requirements.txt
agents/: __init__.py  cautious_policy.py  naive_policy.py  random_policy.py  rl_policy.py  spam_all_actions_policy.py  trained_imitation_policy.py  training_candidate_policy.py
app/: __init__.py  app.py  demo_utils.py
backups/: app.py.backup  demo_utils.py.backup
data/: README.md  action_vocab.json  cautious_traces.jsonl  expert_traces.jsonl  naive_traces.jsonl  policy_comparison.json  policy_comparison_hardened.json  reward_logs.jsonl  scenarios_eval.json  scenarios_train.json  sft_training_data.jsonl  sft_training_data_preview.json
docs/: evaluation_protocol.md  mini_blog.md  reward_design.md  submission_notes.md  training_pipeline.md  video_script.md
env/: actions.py  models.py  openenv_adapter.py  rewards.py  scenarios.py  shadow_supervisor_env.py
evaluation/: compare_policies.py  generate_plots.py  generate_winning_plots.py  metrics.py  run_eval.py  run_eval_hardened.py
media/: blog_post.md  environment_spec.md  pitch_script.md
outputs/: policy_comparison.csv  policy_comparison_hardened.csv  policy_comparison_rl.csv  policy_comparison_with_trained.csv  rl_policy.json  rl_sample_episode_trace.json  rl_training_logs.jsonl  rl_training_metrics.json  sample_episode_trace.json  trained_policy.json  training_metrics.json
scripts/: verify_openenv_compliance.py
server/: app.py
tests/: test_env_smoke.py  test_policy_improvement.py
training/: build_expert_dataset.py  train_sft.py  (+3 more)
